Fixed spacing

--- a/offroad/styles/index.css
+++ b/offroad/styles/index.css
@@ -280,6 +280,7 @@ body {
     grid-row: 1/2;
     align-self: end;
     color: #1A1D1A;
+    padding-top: 100px;
 }
 
 .polaris {
